ajout mouse cursor

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 </head>
 <body>
 
+    <div class="cursor-default cursor-hidden"></div>
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
     <navbar>
         <ul class="nav-ul">
             <li class="nav-link"><a href="index.html">Work</a></li>
-            <li class="nav-link"><a href="pages/projets.html">About</a></li>
-            <li class="nav-link"><a href="pages/contact.html">Contact</a></li>
+            <li class="nav-link"><a href="html/about.html">About</a></li>
+            <li class="nav-link"><a href="html/contact.html">Contact</a></li>
         </ul>
     </navbar>
     
@@ -91,7 +92,7 @@
             <div class="div-row project-div">
 
                 <!--PHOTOMONTAGE-->
-                <a class="lien_image" href="html/pages/photomontage.html">
+                <a class="lien_image" href="html/projects/photomontage.html">
                     <div class="project-card">
                         <img class="project-card-cover" src="./img/cover-photoshop.jpg" />
                         <div class="project-card-data">
@@ -179,5 +180,6 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
+    <script src="js/mouse-cursor.js"></script>
 </body>
 </html>
