--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
@@ -58,6 +59,7 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
+    <script src="../../js/mouse-cursor.js"></script>
 
 </body>
 </html>
