new project system

--- a/index.html
+++ b/index.html
@@ -60,107 +60,31 @@
         </section>
         <section id="project-section">
             <div class="div-row project-div">
-
-                <!--GROS PROJET-->
-                <a class="lien_image" href="./html/projets/jeux/9find-the-way-back.html">
-                    <div class="project-card">
-                        <img class="project-card-cover" src="./img/cover-favorite.jpg" />
-                        <p class="new_tag">NEW</p>
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">FIND THE WAY BACK</p>
-                                <p class="project-card-text">Find The Way Back is the result of my last game jam ! It's a puzzle game and I'm really proud of the mechanics and the story that it allowed us to tell.</p>
-                            </div>
+                <div class="lien_image" >
+                    <img class="project-card-cover" id='project-image' src="./img/cover-favorite.jpg" />
+                    <p id='new-tag' class="new-tag">NEW</p>
+                    <a class="project-window-btn-more" id='project-link'>Discover</a>
+                    <div class="project-card-data">
+                        <div class="project-card-content">
+                            <p id="project-nav-title" class="project-card-title" >FIND THE WAY BACK</p>
                         </div>
                     </div>
-                </a>
-                <!--JEUX VIDÉOS-->
-                <a class="lien_image" href="./html/index/jeu_video.html">
-                    <div class="project-card">
-                        <img class="project-card-cover" src="./img/cover-video-game.jpg" />
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">VIDEO GAMES</p>
-                                <p class="project-card-text">I've been making video games for a while (since I was eleven) and I love gameplay programming.</p>
-                            </div>
+                </div>
+                <div class="div-column">
+                    <div id="project-menu">
+                    </div>
+                    <div class="project-window-empty" href="./html/index/jeu_video.html">
+                        <div class="project-window-navbar">
+                            <p class="project-card-title" id="project-id">[001]</p>
+                        </div>
+                        <div class="project-window-content">
+                            <h3 id="project-title">Find the way back</h3>
+                            <p id="project-text">I've been using photoshop since I was eleven. With time I started making illustration. Each piece of art I realise is made to tell a story and put the spectator's imagination at work.</p>
                         </div>
                     </div>
-                </a>
 
+                </div>
             </div>
-
-            <div class="div-row project-div">
-
-                <!--PHOTOMONTAGE-->
-                <a class="lien_image" href="html/projects/photomontage.html">
-                    <div class="project-card">
-                        <img class="project-card-cover" src="./img/cover-photoshop.jpg" />
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">PHOTOMONTAGE</p>
-                                <p class="project-card-text">I've been using photoshop since I was eleven. With time I started making illustration. Each piece of art I realise is made to tell a story and put the spectator's imagination at work.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <br>
-                <!--PHOTOGRAPHIE-->
-                <a class="lien_image" href="./html/index/photographie.html">
-                    <div class="project-card">
-                        <img class="project-card-cover" src="./img/cover-photograph.jpg" />
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">PHOTOGRAPHY</p>
-                                <p class="project-card-text">Photography allows me to capture moments of life and I really love the story that it can convey.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-            </div>
-
-            <div class="div-row project-div">
-
-                <!--3D-->
-                <a class="lien_image" href="./html/index/3d.html">
-                    <div class=" project-card">
-                        <img class="project-card-cover" src="./img/cover-3d.jpg" />
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">3D</p>
-                                <p class="project-card-text">I started 3D modelisation when I first discovered Unity and wanted to make my own assets. Then it became a real interest for a while and I still love composing a picture or modelising objects.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <!--WEB-->
-                <a class="lien_image" href="./html/index/web.html">
-                    <div class="example-1 project-card">
-                        <div class="wrapper">
-                            <img class="project-card-cover" src="./img/cover-web.jpg" alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur." />
-                            <div class="project-card-data">
-                                <div class="project-card-content">
-                                    <p class="project-card-title">WEB</p>
-                                    <p class="project-card-text">I discovered web development during my DHE in Bordeaux. It quickly became a hobby and led to me learning JS among other things.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <!--GRAPHISME-->
-                <a class="lien_image" href="./html/index/graphisme.html">
-                    <div class="project-card">
-                        <img class="project-card-cover" src="./img/cover-graphisme.jpg" />
-                        <div class="project-card-data">
-                            <div class="project-card-content">
-                                <p class="project-card-title">GRAPHISME</p>
-                                <p class="project-card-text">There you can see a few visuals I've designed during the two last years.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-                <!-- FIN FIN FIN PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
         </section>
     </div>
     <div class="scroll-text-div">
@@ -180,6 +104,8 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
+    <script src="data/projects.js"></script>
     <script src="js/mouse-cursor.js"></script>
+    <script src="js/project-system.js"></script>
 </body>
 </html>
