cursor on button created by script

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
                         <div class="project-card-content">
-                            <p id="project-nav-title" class="project-card-title" >FIND THE WAY BACK</p>
+                            <p id="project-nav-title" class="project-card-title" ></p>
                         </div>
                     </div>
                 </div>
@@ -75,11 +75,11 @@
                     </div>
                     <div class="project-window-empty" href="./html/index/jeu_video.html">
                         <div class="project-window-navbar">
-                            <p class="project-card-title" id="project-id">[000]</p>
+                            <p class="project-card-title" id="project-id"></p>
                         </div>
                         <div class="project-window-content">
-                            <h3 id="project-title">Find the way back</h3>
-                            <p id="project-text">I've been using photoshop since I was eleven. With time I started making illustration. Each piece of art I realise is made to tell a story and put the spectator's imagination at work.</p>
+                            <h3 id="project-title"></h3>
+                            <p id="project-text"></p>
                         </div>
                     </div>
 
@@ -105,7 +105,7 @@
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="data/projects.js"></script>
-    <script src="js/mouse-cursor.js"></script>
     <script src="js/project-system.js"></script>
+    <script src="js/mouse-cursor.js"></script>
 </body>
 </html>
