grille index 1 remise à niveau

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/project-card.css">
+    <link rel="stylesheet" href="css/project-window.css">
     <link rel="stylesheet" href="css/index-section.css">
 
 </head>
@@ -34,9 +34,9 @@
         <br>
     </section>
 
-<!------------------------------------------------------ PROJETS ------------------------------------------------>
     <div class="div-row" id="index-main-section">
 
+        <!-- ABOUT ME  -->
         <section id="about-section">
             <div>
                 <h3>About me</h3>
@@ -48,20 +48,21 @@
                 <h3>Experience</h3>
                 <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
                 <a href="" class="btn-more">More &#10151;</a>
-
             </div>
             <br>
             <div>
                 <h3>Certification</h3>
                 <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
                 <a href="" class="btn-more">More &#10151;</a>
-
             </div>
+            <br>
         </section>
+
+        <!-- PROJET SECTION -->
         <section id="project-section">
             <div class="div-row project-div">
-                <div class="lien_image" >
-                    <img class="project-card-cover" id='project-image' src="./img/cover-favorite.jpg" />
+                <div class="project-window1" >
+                    <img class="project-window1-image" id='project-image' src="./img/cover-favorite.jpg" />
                     <p id='new-tag' class="new-tag">NEW</p>
                     <a class="project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
@@ -73,7 +74,7 @@
                 <div class="div-column">
                     <div id="project-menu">
                     </div>
-                    <div class="project-window-empty" href="./html/index/jeu_video.html">
+                    <div class="project-window2" href="./html/index/jeu_video.html">
                         <div class="project-window-navbar">
                             <p class="project-card-title" id="project-id"></p>
                         </div>
@@ -87,6 +88,8 @@
             </div>
         </section>
     </div>
+
+    <!-- SCROLLING TEXT -->
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
