--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../css/text.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/project-card.css">
     <link rel="stylesheet" href="../css/index-section.css">
 
 </head>
@@ -36,26 +35,31 @@
 
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
-        <section id="about-section">
+        <section id="about-me-section">
             <div>
                 <h3>About me</h3>
                 <p>Hi there ! I'm a french student, currently in internship at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
-            </div>
-            <br>
-            <div>
-                <h3>Experience</h3>
-                <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
+                <p id="text-to-copy">alvinadr24@gmail.com</p>
+
 
             </div>
             <br>
             <div>
-                <h3>Certification</h3>
-                <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
+
 
             </div>
+            <br>
+
+        </section>
+
+        <section id="experience-section">
+            <h3>Experience</h3>
+            <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
+        </section>
+
+        <section id="certification-section">
+            <h3>Certification</h3>
+            <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
         </section>
         
     <div class="scroll-text-div">
@@ -77,5 +81,7 @@
     </footer>
 
     <script src="../js/mouse-cursor.js"></script>
+    <script src="../js/copy.js"></script>
+
 </body>
 </html>
