--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <div>
                 <h3>About me</h3>
                 <p>Hi there ! I'm a french student, currently in internship at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
+                <a href="html/about.html#about-me-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
             <div>
                 <h3>Experience</h3>
                 <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
+                <a href="html/about.html#experience-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
             <div>
                 <h3>Certification</h3>
                 <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
-                <a href="" class="btn-more">More &#10151;</a>
+                <a href="html/about.html#certification-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
         </section>
@@ -62,7 +62,7 @@
         <section id="project-section">
             <div class="div-row project-div">
                 <div class="project-window1" >
-                    <img class="project-window1-image" id='project-image' src="./img/cover-favorite.jpg" />
+                   <img class="project-window1-image" id='project-image' src="./img/cover-favorite.jpg" />
                     <p id='new-tag' class="new-tag">NEW</p>
                     <a class="project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
