ajout texte about

--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../css/text.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/index-section.css">
+    <link rel="stylesheet" href="../css/page-index.css">
+    <link rel="stylesheet" href="../css/page-about.css">
+    <link rel="stylesheet" href="../css/project-window.css">
 
 </head>
 <body>
@@ -35,15 +37,21 @@
 
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
-        <section id="about-me-section">
+        <section id="about-me-section" class="div-row">
             <div>
                 <h3>About me</h3>
-                <p>Hi there ! I'm a french student, currently in internship at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
+                <p>Hi there ! I'm a french student, currently in internship at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p><br>    
+                <p>I started making video games when I was eleven on RPG Maker (pokemon fan games precisely) and it was wonderful. For a while it was a big hobby and everytime I had access to my dad's computer I would try and make maps, put more stuff on my tilesets, animate my characters or try and modify the code (which was ruby) as well as I could. This made me discover Photoshop which quickly also became a hobby.</p><br>
+                <p>In high school I started using Unity trying to make a pokemon 3D game (which is sort of a fixation by now right ?). This led to me discovering C4D and trying my hand at 3D modeling and so. Later on, when I had to choose what I wanted to do in life and what I would study, I had the sudden revelation that I indeed wanted to make video games. And most of all that it was possible.</p><br>
+                <p>So here I am now, really, really making video games and learning to at school. Oh by the way, my name is Alvina Damasio--Razafiarizaka (Damasio, portuguese, father's side, Razafiarizaka, malagasy, mother's side) and I'm from France, Périgueux, a little city two hours away from Bordeaux. And I still think about making a pokemon game from time to time.</p><br>
             </div>
-            <br>
-            <div>
-
-
+            <div class="project-window1">
+                <img class="project-window1-image" src="../img/cover-photoshop.jpg" alt="">
+                <div class="project-card-data">
+                    <div class="project-card-content">
+                        <p id="project-nav-title" class="project-card-title" >Hello</p>
+                    </div>
+                </div>
             </div>
             <br>
 
@@ -51,12 +59,26 @@
 
         <section id="experience-section">
             <h3>Experience</h3>
-            <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
+            <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse. I later entend to continue with a master in video game programming, hopefully at ENJMIN in Angoulême (wink wink).</p><br>    
+            <p>Here are my english and french curriculum. Don't worry, no download it opens in a blank page :D</p>
+            <div class="div-row">
+                <a class="simple-btn" href="../img/Alvina DR - GAMEPLAY PROGRAMMER.pdf" target="_blank">English curriculum</a><br>
+                <a class="simple-btn" href="../img/Alvina DR - GAMEPLAY PROGRAMMER.pdf" target="_blank">French curriculum</a><br>
+            </div>
+
+
+            <br>
         </section>
 
         <section id="certification-section">
             <h3>Certification</h3>
-            <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
+            <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. It juste feels like a satisfying way of learning to me and I enjoy it a lot. Below are all my certifications.</p>    
+            <br>
+            <div>
+                <div>
+                    <p>freeCodeCamp</p>
+                </div>
+            </div>
         </section>
         
     <div class="scroll-text-div">
