--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -21,8 +21,8 @@
     <navbar>
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../index.html">Work</a></li>
-            <li class="nav-link"><a href="pages/projets.html">About</a></li>
-            <li class="nav-link"><a href="pages/contact.html">Contact</a></li>
+            <li class="nav-link"><a href="../about.html">About</a></li>
+            <li class="nav-link"><a href="../contact.html">Contact</a></li>
         </ul>
     </navbar>  
     
@@ -37,12 +37,20 @@
 
     <section id="photomontage-section">
         <div class="div-row">
-            <img src="../../img/photomontage/P10.jpg">
-            <img src="../../img/photomontage/P9.jpg">
-        </div>
+            <div class="div-column">
+                <img src="../../img/photomontage/P10.jpg">            
+                <img src="../../img/photomontage/P9.jpg">
+                <img src="../../img/photomontage/P8.jpg">
+                <img src="../../img/photomontage/P7.jpg">
+            </div>
+
+            <div class="div-column">
+                <p>So yeah there's this monster I dreamt about one night. A sort of dark mud floating in the water, grabbing at things and pulling them down to the bottom of a lake. It was alive. And it was hungry.</p><br>
+                <p>Thinking back on it it looks a lot like the Vashta Nerada from the Doctor Who episodes "Silence in the Library" and "Forest of the Dead", except that it is more "physical" and moves in the water.</p>    
+            </div>
+      </div>
         <div class="div-row">
-            <img src="../../img/photomontage/P8.jpg">
-            <img src="../../img/photomontage/P7.jpg">
+
         </div>
         <div class="div-row">
             <img src="../../img/photomontage/P6.jpg">
