--- a/html/contact.html
+++ b/html/contact.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../css/text.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/index-section.css">
+    <link rel="stylesheet" href="../css/page-index.css">
     <link rel="stylesheet" href="../css/project-window.css">
-    <link rel="stylesheet" href="../css/contact-section.css">
+    <link rel="stylesheet" href="../css/page-contact.css">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
