--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/project-window.css">
-    <link rel="stylesheet" href="css/index-section.css">
+    <link rel="stylesheet" href="css/page-index.css">
 
 </head>
 <body>
