ajout page photomontage et projet tavrox games

--- a/html/about.html
+++ b/html/about.html
@@ -46,7 +46,7 @@
                 <p>So here I am now, really, really making video games and learning to at school. Oh by the way, my name is Alvina Damasio--Razafiarizaka (Damasio, portuguese, father's side, Razafiarizaka, malagasy, mother's side) and I'm from France, Périgueux, a little city two hours away from Bordeaux. And I still think about making a pokemon game from time to time.</p><br>
             </div>
             <div class="project-window1">
-                <img class="project-window1-image" src="../img/cover-photoshop.jpg" alt="">
+                <img class="project-window1-image" src="../img/photomontage/P7.jpg" alt="">
                 <div class="project-card-data">
                     <div class="project-card-content">
                         <p id="project-nav-title" class="project-card-title" >Hello</p>
