ajout bande effet de style photomontage (à reprendre bonne idée) + modification cover des projets web et photomontage

--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -35,6 +35,16 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
+    <div class="div-row content-line-showcase">
+        <img src="../../img/photomontage/P10.jpg">            
+        <img src="../../img/photomontage/P9.jpg">            
+        <img src="../../img/photomontage/P8.jpg">            
+        <img src="../../img/photomontage/P7.jpg">            
+        <img src="../../img/photomontage/P6.jpg">            
+        <img src="../../img/photomontage/P4.jpg">            
+        <img src="../../img/photomontage/P2.jpg">            
+        <img src="../../img/photomontage/P1.jpg">            
+    </div>
     <section id="photomontage-section">
         <div class="div-row">
             <div class="div-column">
