--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../../css/text.css">
     <link rel="stylesheet" href="../../css/navbar.css">
     <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="../../css/photomontage.css">
     <link rel="stylesheet" href="../../css/page-specific-project.css">
 </head>
 <body>
@@ -35,17 +34,18 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <div class="div-row content-line-showcase">
-        <img src="../../img/photomontage/P10.jpg">            
-        <img src="../../img/photomontage/P9.jpg">            
-        <img src="../../img/photomontage/P8.jpg">            
-        <img src="../../img/photomontage/P7.jpg">            
-        <img src="../../img/photomontage/P6.jpg">            
-        <img src="../../img/photomontage/P4.jpg">            
-        <img src="../../img/photomontage/P2.jpg">            
-        <img src="../../img/photomontage/P1.jpg">            
-    </div>
+
     <section id="photomontage-section">
+        <div class="div-row content-line-showcase">
+            <img src="../../img/photomontage/P10.jpg">            
+            <img src="../../img/photomontage/P9.jpg">            
+            <img src="../../img/photomontage/P8.jpg">            
+            <img src="../../img/photomontage/P7.jpg">            
+            <img src="../../img/photomontage/P6.jpg">            
+            <img src="../../img/photomontage/P4.jpg">            
+            <img src="../../img/photomontage/P2.jpg">            
+            <img src="../../img/photomontage/P1.jpg">            
+        </div>
         <div class="div-row">
             <div class="div-column">
                 <img src="../../img/photomontage/P10.jpg">            
@@ -79,7 +79,7 @@
         </div>
         <div class="div-row">
             <div class="div-column">
-                <p>First week of my DHE, we had to do the cover of a music album. As I was already quite familiar with photoshop and loved doing montages, this was the best surprise ! I was totally in my element and had so much fun making this piece !</p><br>
+                <p>First week of my DipHE, we had to do the cover of a music album. As I was already quite familiar with photoshop and loved doing montages, this was the best surprise ! I was totally in my element and had so much fun making this piece !</p><br>
                 <p>I chose to make an alternative cover to the album "origins" by Imagine Dragons.</p><br>  
                 <div class="div-row">
                     <img src="../../img/photomontage/origins/origins1.jpg"> 
