fix link apparence

--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -86,7 +86,7 @@
                     <img src="../../img/photomontage/origins/origins2.jpg"> 
                     <img src="../../img/photomontage/origins/origins3.jpg"> 
                 </div><br>
-                <p>You can click on this link to <a href="https://youtu.be/JyeG7LvVOWo" target="_blank">see the whole process</a>.</p><br>  
+                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/JyeG7LvVOWo" target="_blank">see the whole process</a>.</p><br>  
             </div>
             <div class="div-column">
                 <img src="../../img/photomontage/P7.jpg">
@@ -115,13 +115,13 @@
             </div>
             <div class="div-column">
                 <p>This one is starting to get old now. Just a spaceship crashing on a planet. Very few elements but I enjoyed making it a lot at the time.</p><br>
-                <p>You can click on this link to <a href="https://youtu.be/XvsrA4PbQlI" target="_blank">see the whole process</a>.</p><br> 
+                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/XvsrA4PbQlI" target="_blank">see the whole process</a>.</p><br> 
             </div>
         </div>
         <div class="div-row">
             <div class="div-column">
                 <p>First piece I ever made ! It's still looking better than some I've done since then. Well, practice makes better I guess ? I really like the colors and it's quite peaceful. It's named Angel's Bay.</p><br>
-                <p>You can click on this link to <a href="https://youtu.be/Y_rxclOkZ1Y" target="_blank">see the whole process</a>.</p><br> 
+                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/Y_rxclOkZ1Y" target="_blank">see the whole process</a>.</p><br> 
             </div>
             <div class="div-column">
                 <img src="../../img/photomontage/P1.jpg">
