recalage circle text + ajout new qui défile sur project window + toute la section jeu vidéo

--- a/index.html
+++ b/index.html
@@ -63,11 +63,22 @@
             <div class="div-row project-div">
                 <div class="project-window1" >
                    <img class="project-window1-image" id='project-image' src="./img/cover-favorite.jpg" />
-                    <p id='new-tag' class="new-tag">NEW</p>
+
+                    <!-- <p  class="new-tag">NEW</p> -->
                     <a class="project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
                         <div class="project-card-content">
                             <p id="project-nav-title" class="project-card-title" ></p>
+                            <div id='new-tag' class="scroll-text-new-div new-tag">
+                                <div style="width: 1000px">
+                                    <div class="scroll-text-new" >
+                                        <h5>&nbsp;NEW • NEW • NEW • NEW • NEW • NEW • NEW • NEW •</h5>
+                                    </div>
+                                    <div class="scroll-text-new">
+                                        <h5>&nbsp;NEW • NEW • NEW • NEW • NEW • NEW • NEW • NEW •</h5>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +110,6 @@
                 <h5>&nbsp;GAMEPLAY PROGRAMMING . LEVEL DESIGN . PHOTOMONTAGE . PHOTOGRAPHY . WEB DEVELOPMENT . STORYTELLING .</h5>
             </div>
         </div>
-
     </div>
 
     <!-- FOOTER -->
