--- a/html/contact.html
+++ b/html/contact.html
@@ -28,21 +28,29 @@
     </navbar>
     
     <div class="grid grid-contact-1"></div>
-    <section id="landing-section">
-        <h1>Alvina DR</h1>
-        <p>2022</p>
+    <section id="landing-section" class="div-row">
+        <div class="div-column">
+            <h1>Alvina DR</h1>
+            <p>2022</p>
+        </div>
         <br>
+        <div class="mail-div">
+            <p id="text-to-copy">alvinadr24@gmail.com</p>
+        </div>
     </section>
 
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
+<p id="copied-sign">COPIED</p>
 
     <section id="contact-section" class="div-row">
+
         <div>
             <p>Hi there, to contact me you can copy the email adress below.</p>
             <p>You can also see all my social media here : </p>
+
+
         </div>
         <div class="div-column">
-            <p id="text-to-copy">alvinadr24@gmail.com</p>
             <div class="project-window2" href="./html/index/jeu_video.html">
                 <div class="project-window-navbar">
                     <p class="project-card-title" id="project-id">Social media</p>
