modification about et contact

--- a/html/about.html
+++ b/html/about.html
@@ -76,7 +76,7 @@
             <br>
             <div>
                 <div>
-                    <p>freeCodeCamp</p>
+                    <p>freeCodeCamp : </p>
                 </div>
             </div>
         </section>
