ftwb page setup

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -36,6 +36,10 @@
 
 <!------------------------------------------------------ VIDEO GAME -------------------------------------------->
 
+    <div class="div-row" style="justify-content: center;">
+        <a class="btn1" href="">WORK</a>
+        <a class="btn1" href="">JAM</a>
+    </div><br>
     <section id="video-game-section" class="div-row">
         <div class="div-wrap" id="video-game-container"></div>
     </section>
@@ -45,6 +49,8 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/gijsroge/tilt.js/38991dd7/dest/tilt.jquery.js"></script>
     <script src="../../data/video-games.js"></script>
 
     <script src="../../js/mouse-cursor.js"></script>
