--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                    <img class="project-window1-image" id='project-image' src="./img/cover-favorite.jpg" />
 
                     <!-- <p  class="new-tag">NEW</p> -->
-                    <a class="project-window-btn-more" id='project-link'>Discover</a>
+                    <a class="btn1 project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
                         <div class="project-card-content">
                             <p id="project-nav-title" class="project-card-title" ></p>
