--- a/html/projects/find-the-way-back.html
+++ b/html/projects/find-the-way-back.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../css/text.css">
     <link rel="stylesheet" href="../../css/navbar.css">
     <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="../../css/page-specific-project.css">
 
 </head>
 <body>
@@ -20,12 +21,12 @@
     <navbar>
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../index.html">Work</a></li>
-            <li class="nav-link"><a href="pages/projets.html">About</a></li>
-            <li class="nav-link"><a href="pages/contact.html">Contact</a></li>
+            <li class="nav-link"><a href="../about.html">About</a></li>
+            <li class="nav-link"><a href="../contact.html">Contact</a></li>
         </ul>
     </navbar>  
     
-    <div class="grid grid-photomontage-1"></div>
+    <div class="grid grid-ftwb"></div>
     <section id="landing-section">
         <h1>Alvina DR</h1>
         <p>2022</p>
@@ -34,7 +35,27 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section >
+    <section id="ftwb-section" class="div-row">
+            <div class="div-column">
+                <h3>Find the way back</h3>
+                <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p><br>
+                <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p><br>
+                <p>It's a puzzle game where you control two reflection of the same character. When one moves right, the other moves left. The goal of the game is to bring the two characters to the ending slates to complete the level. The game in itself is pretty simple but the levels can be quite complex.</p><br>
+                
+                <img src="../../img/video-games/FTWB/3.gif" style="width: 100%;"><br>
+                <div class="div-row" style="width: 100%;">
+                    <img src="../../img/video-games/FTWB/level1.gif" style="width: 49%;">
+                    <img src="../../img/video-games/FTWB/2.gif" style="width: 49%;">
+                </div>
+      </div>
+            <div class="div-column" style="width: 60%; margin-left : 10px;">
+                <img src="../../img/video-games/FTWB/screen1.png"><br>
+                <p>The background story is one of the pieces of this game I like the most. Earlier I talked about ending and beginning. Well, here we thought back to all those games where you are the hero and need to save the world. And the game always ends when you do. Except, well, appart from the fact it's all fictionnal, this, saving the world, fighting darkness, etc... Would be pretty traumatising to everyone. And it's never talked about, the way these heroes need to go back home when all these is over. So the game is also about that, learning to live after surviving.</p><br>*
+                <p>Although here I was talking about heroes from video games, the same could go for soldiers or people battling to survive in real life. It's a good question that needs to be asked : how do you cope when you finally won ? How do you drop your weapons, how do you sleep again ? I guess it's a game about trauma somehow. But the deeper meaning behind it is what makes it my favorite game I've made.</p><br>
+                <p>Find The Way Back also is the first game that was "bought" from us, since someone made a donation of 2$, which amounted to around 1,39€, money which was wisely spent in pasta.</p><br>
+                <p>If you want to try the game it's available online on your browser or downloadable through the itch.io page just by clicking the button below. Hope you enjoy !</p><br>
+                <a class="btn1" href="https://alvina-dr.itch.io/find-the-way-back" target="_blank">Discover the game</a>
+            </div>
     </section>
 
     <!-- FOOTER -->
