--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR - Portfolio</title>
+    <title>Alvina DR - Portfolio | Find the way back</title>
 
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/text.css">
-    <link rel="stylesheet" href="../../css/navbar.css">
-    <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="../../css/page-specific-project.css">
+    <link rel="stylesheet" href="../../../css/main.css">
+    <link rel="stylesheet" href="../../../css/text.css">
+    <link rel="stylesheet" href="../../../css/navbar.css">
+    <link rel="stylesheet" href="../../../css/footer.css">
+    <link rel="stylesheet" href="../../../css/page-specific-project.css">
 
 </head>
 <body>
@@ -20,9 +20,9 @@
     <div class="grid grid-header"></div>
     <navbar>
         <ul class="nav-ul">
-            <li class="nav-link"><a href="../../index.html">Work</a></li>
-            <li class="nav-link"><a href="../about.html">About</a></li>
-            <li class="nav-link"><a href="../contact.html">Contact</a></li>
+            <li class="nav-link"><a href="../../../index.html">Work</a></li>
+            <li class="nav-link"><a href="../../about.html">About</a></li>
+            <li class="nav-link"><a href="../../contact.html">Contact</a></li>
         </ul>
     </navbar>  
     
@@ -42,14 +42,14 @@
                 <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p><br>
                 <p>It's a puzzle game where you control two reflection of the same character. When one moves right, the other moves left. The goal of the game is to bring the two characters to the ending slates to complete the level. The game in itself is pretty simple but the levels can be quite complex.</p><br>
                 
-                <img src="../../img/video-games/FTWB/3.gif" style="width: 100%;"><br>
+                <img src="../../../img/video-games/find-the-way-back/ftwb-level2.gif" style="width: 100%;"><br>
                 <div class="div-row" style="width: 100%;">
-                    <img src="../../img/video-games/FTWB/level1.gif" style="width: 49%;">
-                    <img src="../../img/video-games/FTWB/2.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/find-the-way-back/ftwb-level1.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/find-the-way-back/ftwb-transition.gif" style="width: 49%;">
                 </div>
       </div>
             <div class="div-column" style="width: 60%; margin-left : 10px;">
-                <img src="../../img/video-games/FTWB/screen1.png"><br>
+                <img src="../../../img/video-games/find-the-way-back/ftwb-menu.png"><br>
                 <p>The background story is one of the pieces of this game I like the most. Earlier I talked about ending and beginning. Well, here we thought back to all those games where you are the hero and need to save the world. And the game always ends when you do. Except, well, appart from the fact it's all fictionnal, this, saving the world, fighting darkness, etc... Would be pretty traumatising to everyone. And it's never talked about, the way these heroes need to go back home when all these is over. So the game is also about that, learning to live after surviving.</p><br>*
                 <p>Although here I was talking about heroes from video games, the same could go for soldiers or people battling to survive in real life. It's a good question that needs to be asked : how do you cope when you finally won ? How do you drop your weapons, how do you sleep again ? I guess it's a game about trauma somehow. But the deeper meaning behind it is what makes it my favorite game I've made.</p><br>
                 <p>Find The Way Back also is the first game that was "bought" from us, since someone made a donation of 2$, which amounted to around 1,39€, money which was wisely spent in pasta.</p><br>
@@ -63,7 +63,7 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
-    <script src="../../js/mouse-cursor.js"></script>
+    <script src="../../../js/mouse-cursor.js"></script>
 
 </body>
 </html>
